{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 29,
  "lineage": "e02ace2b-dd3f-ebc0-7474-7347cf7168b1",
  "resources": [
    {
      "module": "module.accounting",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "one",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a8e758f5e873d1c1",
            "arn": "arn:aws:ec2:eu-west-1:987862593627:instance/i-04233370fa225f524",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04233370fa225f524",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ahmad-vpc-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ec3a99a01681e15b",
            "private_dns": "ip-172-31-27-228.eu-west-1.compute.internal",
            "private_ip": "172.31.27.228",
            "public_dns": "ec2-54-73-43-147.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.73.43.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c0b286a55da97aae",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_tls"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-27488f6c",
            "tags": {
              "Name": "finance_acconting"
            },
            "tags_all": {
              "Name": "finance_acconting"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dcf4dc3a31781b36"
            ]
          },
          "dependencies": [
            "module.accounting.aws_security_group.allow_tls"
          ]
        },
        {
          "index_key": "two",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a8e758f5e873d1c1",
            "arn": "arn:aws:ec2:eu-west-1:987862593627:instance/i-070ac63118a47b179",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-070ac63118a47b179",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ahmad-vpc-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01688c4383b53f350",
            "private_dns": "ip-172-31-20-166.eu-west-1.compute.internal",
            "private_ip": "172.31.20.166",
            "public_dns": "ec2-34-242-59-200.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.242.59.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b25ef6444b772d22",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_tls"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-27488f6c",
            "tags": {
              "Name": "finance_acconting"
            },
            "tags_all": {
              "Name": "finance_acconting"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dcf4dc3a31781b36"
            ]
          },
          "dependencies": [
            "module.accounting.aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "module": "module.accounting",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:987862593627:security-group/sg-0dcf4dc3a31781b36",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All networks allowed",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dcf4dc3a31781b36",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "987862593627",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-7b843e02"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.load_balancer_creating",
      "mode": "managed",
      "type": "aws_lb",
      "name": "test-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:987862593627:loadbalancer/app/test-lb-tf/1fbd2997319e5d68",
            "arn_suffix": "app/test-lb-tf/1fbd2997319e5d68",
            "dns_name": "test-lb-tf-1194267927.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:987862593627:loadbalancer/app/test-lb-tf/1fbd2997319e5d68",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-0dcf4dc3a31781b36"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-199d6a60"
              },
              {
                "subnet_id": "subnet-27488f6c"
              },
              {
                "subnet_id": "subnet-ceb48594"
              }
            ],
            "subnets": [
              "subnet-199d6a60",
              "subnet-27488f6c",
              "subnet-ceb48594"
            ],
            "tags": {
              "Name": "my-test-alb"
            },
            "tags_all": {
              "Name": "my-test-alb"
            },
            "vpc_id": "vpc-7b843e02",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.accounting.aws_security_group.allow_tls",
            "module.load_balancer_creating.data.aws_subnet_ids.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer_creating",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my-test-alb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:987862593627:listener/app/test-lb-tf/1fbd2997319e5d68/bbb80e3ffb04f9f1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:987862593627:targetgroup/nginx-tg/40c1cd3dcd733df0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:987862593627:listener/app/test-lb-tf/1fbd2997319e5d68/bbb80e3ffb04f9f1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:987862593627:loadbalancer/app/test-lb-tf/1fbd2997319e5d68",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer_creating.aws_lb.test-alb",
            "module.target_group_creating.aws_lb_target_group.nginx_tg"
          ]
        }
      ]
    },
    {
      "module": "module.target_group_creating",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:987862593627:targetgroup/nginx-tg/40c1cd3dcd733df0",
            "arn_suffix": "targetgroup/nginx-tg/40c1cd3dcd733df0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:987862593627:targetgroup/nginx-tg/40c1cd3dcd733df0",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-7b843e02"
          }
        }
      ]
    },
    {
      "module": "module.target_group_creating",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:987862593627:targetgroup/nginx-tg/40c1cd3dcd733df0-20211101154154937000000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:987862593627:targetgroup/nginx-tg/40c1cd3dcd733df0",
            "target_id": "i-04233370fa225f524"
          },
          "dependencies": [
            "module.accounting.aws_instance.instance",
            "module.accounting.aws_security_group.allow_tls",
            "module.target_group_creating.aws_lb_target_group.nginx_tg"
          ]
        }
      ]
    },
    {
      "module": "module.target_group_creating",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:987862593627:targetgroup/nginx-tg/40c1cd3dcd733df0-20211101154154947700000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:987862593627:targetgroup/nginx-tg/40c1cd3dcd733df0",
            "target_id": "i-070ac63118a47b179"
          },
          "dependencies": [
            "module.accounting.aws_instance.instance",
            "module.accounting.aws_security_group.allow_tls",
            "module.target_group_creating.aws_lb_target_group.nginx_tg"
          ]
        }
      ]
    }
  ]
}